DDI-Lifecycle/3.2/model/_sources/item-types/RepresentedVariable/index.rst.txt
RepresentedVariable
-------------------

Describes a RepresentedVariable contained in the RepresentedVariableScheme. In addition to the standard name, label, and description a RepresentedVariable contains a reference to the Concept and Universe (or ConceptualVariable) as well as the representation of the RepresentedVariable. Representation may be provided in-line or by reference to a managed representation. RepresentedVariables are the core reusable parts of a Variable. RepresentedVariable maps to the GSIM Represented Variable. In addition to the standard name, label, and description

Properties
~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "RepresentedVariableName",":doc:`/composite-types/NameType/index`","0..n","A name for the RepresentedVariable. May be expressed in multiple languages. Repeat the element to express names with different content, for example different names for different systems."
   "Label",":doc:`/composite-types/LabelType/index`","0..n","A display label for the RepresentedVariable. May be expressed in multiple languages. Repeat for labels with different content, for example, labels with differing length limitations."
   "Description",":doc:`/composite-types/StructuredStringType/index`","0..1","A description of the RepresentedVariable. May be expressed in multiple languages and supports the use of structured content."
   "ConceptualVariableReference",":doc:`/item-types/ConceptualVariable/index`","0..1","A reference to a ConceptualVariable which provides the linkage to the Universe and Concept used by this RepresentedVariable. TypeOfObject should be set to ConceptualVariable."
   "UniverseReference",":doc:`/item-types/Universe/index`","0..1","Reference to the universe statement containing a description of the widest possible group of persons or other elements that this RepresentedVariable refers to, and to which any analytic results refer. TypeOfObject should be set to Universe."
   "ConceptReference",":doc:`/item-types/Concept/index`","0..1","Reference to the concept measured by this RepresentedVariable. TypeOfObject should be set to Concept."
   "CategorySchemeReference",":doc:`/item-types/CategoryScheme/index`","0..1","Reference to a category scheme that contains the representation domain of the RepresentedVariable. Use this element when only the category specifications are provided. If both a code and the related category must be specified use CodeRepresentation (member of the substitution group ValueRepresentation). TypeOfObject should be set to CategoryScheme."
   "ValueRepresentation",":doc:`/composite-types/RepresentationType/index`","0..1","Describes the actual representation of the RepresentedVariables' values. ValueRepresentation is the head of a substitution group which supports a number of representation types, i.e. CodeRepresentation, NumericRepresentation, TextRepresentation, DateTimeRepresentation, ScaleRepresentation, GeographicStructureCodeRepresentation, and GeographicLocationCodeRepresentation. Although the structure allows for specification of missing values these features should be used with caution. Like the definition of the universe and concept, the specification of the representation can be constrained by the Variable (the GSIM ImplementedVariable), for example a NumericRepresentation could be constrained with a lower top coding specification. Missing Values can be assigned separately by the Variable without impact on the ValueRepresentation of the specified valid values provided here."
   "ValueRepresentationReference_ManagedMissingValuesRepresentation",":doc:`/item-types/ManagedMissingValuesRepresentation/index`","0..1","Allows for the use of managed value representations by reference. ValueRepresentationReference is the head of a substitution group which supports a number of representation types not managed within existing schemes, i.e. ManagedNumericRepresentation, ManagedTextRepresentation, ManagedDateTimeRepresentation, and ManagedScaleRepresentation. TypeOfObject should be set to ManagedNumericRepresentation, ManagedTextRepresentation, ManagedDateTimeRepresentation, or ManagedScaleRepresentation."
   "ValueRepresentationReference_ManagedScaleRepresentation",":doc:`/item-types/ManagedScaleRepresentation/index`","0..1","Allows for the use of managed value representations by reference. ValueRepresentationReference is the head of a substitution group which supports a number of representation types not managed within existing schemes, i.e. ManagedNumericRepresentation, ManagedTextRepresentation, ManagedDateTimeRepresentation, and ManagedScaleRepresentation. TypeOfObject should be set to ManagedNumericRepresentation, ManagedTextRepresentation, ManagedDateTimeRepresentation, or ManagedScaleRepresentation."
   "ValueRepresentationReference_ManagedNumericRepresentation",":doc:`/item-types/ManagedNumericRepresentation/index`","0..1","Allows for the use of managed value representations by reference. ValueRepresentationReference is the head of a substitution group which supports a number of representation types not managed within existing schemes, i.e. ManagedNumericRepresentation, ManagedTextRepresentation, ManagedDateTimeRepresentation, and ManagedScaleRepresentation. TypeOfObject should be set to ManagedNumericRepresentation, ManagedTextRepresentation, ManagedDateTimeRepresentation, or ManagedScaleRepresentation."
   "ValueRepresentationReference_ManagedDateTimeRepresentation",":doc:`/item-types/ManagedDateTimeRepresentation/index`","0..1","Allows for the use of managed value representations by reference. ValueRepresentationReference is the head of a substitution group which supports a number of representation types not managed within existing schemes, i.e. ManagedNumericRepresentation, ManagedTextRepresentation, ManagedDateTimeRepresentation, and ManagedScaleRepresentation. TypeOfObject should be set to ManagedNumericRepresentation, ManagedTextRepresentation, ManagedDateTimeRepresentation, or ManagedScaleRepresentation."
   "ValueRepresentationReference_ManagedTextRepresentation",":doc:`/item-types/ManagedTextRepresentation/index`","0..1","Allows for the use of managed value representations by reference. ValueRepresentationReference is the head of a substitution group which supports a number of representation types not managed within existing schemes, i.e. ManagedNumericRepresentation, ManagedTextRepresentation, ManagedDateTimeRepresentation, and ManagedScaleRepresentation. TypeOfObject should be set to ManagedNumericRepresentation, ManagedTextRepresentation, ManagedDateTimeRepresentation, or ManagedScaleRepresentation."

Properties Inherited from Versionable
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "URN","string","1..1",""
   "Agency","string","1..1",""
   "ID","string","1..1",""
   "Version","string","1..1",""
   "UserID",":doc:`/composite-types/UserIDType/index`","0..n","Allows for the specification of identifiers other than the specified DDI identification of the object. This may be a legacy ID from DDI-C, a system specific ID such as for a database or registry, or a non-DDI unique identifier. As the identifier is specific to a system the system must be identified with the UserID structure."
   "InheritanceAction","string","0..1","The attribute ""action"" is used for inheritance situations where there is an override at the local level (within a grouped StudyUnit) which is not available for further inheritance. There are three possible values for ""action"": Add - A new identifiable object (an Identifiable, Versionable, or Maintainable element) is provided locally with a new identifier (one that is not inherited). All properties (elements and attributes contained in the object) of the object are as specified. If an object with an existing id is created, this is an error.; Update - An object is provided locally with the SAME id as the inherited object. For each type of property that is specified locally, a full set of those properties is specified for local use. These properties replace any properties of this type which were inherited. Unspecified properties are used as inherited.; Delete - An object is provided locally with the SAME id as the inherited object. All properties specified locally in this object will be deleted if their types and values match those inherited. Note that to completely delete an object at the local level, all properties of the inherited object must be listed."
   "UserAttributePair",":doc:`/composite-types/StandardKeyValuePairType/index`","0..n","A system specific user defined property of the object expressed as a key/value pair. As this is specific to an individual system the use of controlled vocabularies for the key is strongly recommended."
   "VersionResponsibility","string","0..1","Person or organization within the MaintenanceAgency responsible for the version change. If it is important to retain the affiliation between and individual responsible for the version and his/her agency, it may be included in this notation. This is primarily intended for internal use."
   "VersionResponsibilityReference_Organization",":doc:`/item-types/Organization/index`","0..1","Reference person or organization within the MaintenanceAgency responsible for the version change, as described in an OrganizationScheme. If it is important to retain the affiliation between and individual responsible for the version and his/her agency, a Relation should be created between the individual referenced here and his/her organization. This is primarily intended for internal use."
   "VersionResponsibilityReference_Individual",":doc:`/item-types/Individual/index`","0..1","Reference person or organization within the MaintenanceAgency responsible for the version change, as described in an OrganizationScheme. If it is important to retain the affiliation between and individual responsible for the version and his/her agency, a Relation should be created between the individual referenced here and his/her organization. This is primarily intended for internal use."
   "VersionRationale",":doc:`/composite-types/VersionRationaleType/index`","0..1","Textual description of the rationale/purpose for the version change and a coded value to provide an internal processing flag within and organization or system. Note that versioning can only take place on objects owned by the specified DDI Agency. If you are creating a local instance of an object from another agency for current or future modification use BasedOnObject. If the changes being made result in what you determine to be new object rather than a version of a previous object, i.e. the change is too extensive to consider it a version of the existing object, create a new object and use BasedOnObject to provide a link to the object or objects that were a basis for the new object."
   "BasedOnObject",":doc:`/composite-types/BasedOnObjectType/index`","0..1","Use when creating an object that is based on an existing object or objects that are managed by a different agency or when the new object is NOT simply a version change but you wish to maintain a reference to the object that served as a basis for the new object. BasedOnObject may contain references to any number of objects which serve as a basis for this object, a BasedOnRationalDescription of how the content of the referenced object was incorporated or altered, and a BasedOnRationalCode to allow for specific typing of the BasedOnReference according to an external controlled vocabulary."
   "VersionDate","cogsDate","0..1","Date of version using the union set BaseDateType. Duration should not be used in this field, even though allowed by the ISO format enforced by the parser."


Item Type Hierarchy
~~~~~~~~~~~~~~~~~~~

* :doc:`/item-types/Versionable/index`
    * **RepresentedVariable**


Relationships
~~~~~~~~~~~~~
The following types reference this type.

* :doc:`/item-types/RepresentedVariableGroup/index`
* :doc:`/item-types/RepresentedVariableScheme/index`
* :doc:`/item-types/Variable/index`

.. container:: image

   |stub|

.. |stub| image:: ../../images/RepresentedVariable.svg

